<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Nomes para Aplicacao -->
    <string name="app_name">Minhas Senhas</string>
    <string name="ownerName">Usuário</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>

    <!-- Acoes da Aplicacao -->
    <string name="action_settings">Configurações</string>
    <string name="action_backup_restore">Copia de Segurança / Restauração</string>
    <string name="action_backup">Criar Copia de Segurança</string>
    <string name="action_edit">Alterar</string>
    <string name="action_delete">Excluir</string>
    <string name="action_save">Salvar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_ok">OK</string>

    <!-- Label generica -->
    <string name="labelNone"></string>

    <!-- Tela de Resgistro de usuario para o sistema -->
    <string name="title_activity_user_registering_the_in_system">Cadastro de usuário</string>
    <string name="labelHomeRegisterNome">Nome:</string>
    <string name="labelHomeRegisterEmail">E-mail:</string>
    <string name="labelHomeRegisterSenha">Senha:</string>

    <!-- Tela Main -->
    <string name="labelMainDigiteSenha">Digite a Senha:</string>

    <!-- Tela Home -->
    <string name="title_activity_home">Home</string>
    <string name="labelHomeTitulo">Bem-Vindo!</string>
    <string name="labelHomeNewKey">Nova Senha</string>
    <string name="labelHomeListKeys">Listar Senhas</string>

    <!-- Tela de Cadastro de Senha -->
    <string name="title_activity_new_key">Cadastrar Senha</string>
    <string name="labelNewKeyCategoria">Categoria:</string>
    <string name="labelNewKeyApp">Nome (E-mail, Blog, Comunidade, Aplicações e etc):</string>
    <string name="labelNewKeyUser">Usuário:</string>
    <string name="labelNewKeyPassword">Senha:</string>

    <!-- Tela de Listagem de Senhas -->
    <string name="title_activity_list_key">Senhas</string>

    <!-- Tela de Cadatro de Categoria -->
    <string name="title_activity_new_category">Cadastrar Categoria</string>
    <string name="labelNewCategory">Nome da Categoria:</string>
    <string name="labelNewCategoryOrdem">Ordem:</string>
    <string name="labelNewCategoryObs">Obs: A ordem se refere a posição da categoria na tela inicial.</string>
    <string name="labelListKeyCategory">Categoria:</string>

    <!-- Tela de Configurações do Sistema -->
    <string name="title_activity_settings">Configurações do Sistema</string>

    <!-- Tela de Backup e Restore -->
    <string name="title_activity_backup_restore">Cópia de Segurança e Restauração</string>
    <string name="labelBackupSelecione">Selecione um Backup para restaurar:</string>
    <string name="labelBackupDataCompl">Data da criação: </string>
    
    <!-- Tela de Configurações de Categorias -->
    <string name="title_activity_category_settings">Categorias</string>

</resources>