<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewCategoryActivity" >

    <LinearLayout
        android:id="@+id/linearNewKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageNewCategory"
            android:layout_width="261dp"
            android:layout_height="181dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/labelNone"
            android:src="@drawable/ic_category" />

        <TextView
            android:id="@+id/labelNewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/labelNewCategory"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editNewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapSentences" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelNewCategoryOrdem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/labelNewCategoryOrdem"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editNewCategoryOrdem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/labelNewCategoryObs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNewCategoryObs"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</ScrollView>