<!-- ?xml version="1.0" encoding="utf-8" ? -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserRegisteringtheInSystemActivity" >

    <TextView
        android:id="@+id/labelHomeRegisterNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:text="@string/labelHomeRegisterNome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editHomeRegisterNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:ems="10"
        android:inputType="textPersonName|textCapSentences" />

    <TextView
        android:id="@+id/labelHomeRegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHomeRegisterEmail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editHomeRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/labelHomeRegisterSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHomeRegisterSenha"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editHomeRegisterSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberPassword"
        android:maxLength="4" >
    </EditText>

</LinearLayout>