<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewKeyActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="507dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/linearNewKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelNewKeyCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNewKeyCategoria"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/spinnerNewKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelNewKeyApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNewKeyApp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editNewKeyApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/labelNewKeyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNewKeyUser" />

            <EditText
                android:id="@+id/editNewKeyUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/labelNewKeyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelNewKeyPassword" />

            <EditText
                android:id="@+id/editNewKeyPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textVisiblePassword" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonNewKeySave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/linearNewKey"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp"
            android:drawableLeft="@drawable/ic_checked_square"
            android:text="@string/buttonNewKeySave" />
    </RelativeLayout>

</ScrollView>